# data-engineering-course

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
numpy_tasks/: task_1.py  task_2.py  task_3.py  task_4.py
tests/numpy_tasks/: test_numpy_task_3.py
